--- a/medverify-backend/src/main/resources/application.yml
+++ b/medverify-backend/src/main/resources/application.yml
@@ -78,9 +78,11 @@ jwt:
   expiration: 900000 # 15 minutes in milliseconds
   refresh-expiration: 604800000 # 7 days in milliseconds
 
-# CORS Configuration
+# CORS Configuration (par défaut : production-safe)
+# ⚠️ En production, utiliser uniquement les domaines réels
+# ⚠️ Pour développement, utiliser le profil 'dev' ou 'local' qui autorise les IPs locales
 cors:
-  allowed-origins: ${CORS_ORIGINS:http://localhost:3000,http://localhost:19006,http://192.168.1.16:8080,http://10.0.2.2:8080}
+  allowed-origins: ${CORS_ORIGINS:https://medverify.gw,https://api.medverify.gw}
   allowed-methods: GET,POST,PUT,DELETE,OPTIONS,PATCH
   allowed-headers: Authorization,Content-Type,Accept,Origin,X-Requested-With
   exposed-headers: Authorization,X-Total-Count
@@ -124,16 +126,17 @@ management:
     tags:
       application: ${spring.application.name}
 
-# Logging Configuration
+# Logging Configuration (par défaut : production-safe)
+# ⚠️ Pour développement, utiliser le profil 'dev' qui active les logs DEBUG
 logging:
   level:
     root: INFO
-    com.medverify: DEBUG
-    org.springframework.security: DEBUG
+    com.medverify: INFO
+    org.springframework.security: WARN
     org.springframework.web: INFO
-    org.hibernate.SQL: DEBUG
-    org.hibernate.type.descriptor.sql.BasicBinder: TRACE
-    # Note: En production, ces niveaux DEBUG doivent être INFO ou WARN
+    org.hibernate.SQL: WARN
+    org.hibernate.type.descriptor.sql.BasicBinder: WARN
+    # En production, les logs DEBUG sont désactivés pour la sécurité et performance
   pattern:
     console: "%d{yyyy-MM-dd HH:mm:ss} - %msg%n"
     file: "%d{yyyy-MM-dd HH:mm:ss} [%thread] %-5level %logger{36} - %msg%n"
@@ -219,16 +222,38 @@ cloud-storage:
 
 ---
 # Profile: Development
+# Utiliser avec : -Dspring.profiles.active=dev
 spring:
   config:
     activate:
       on-profile: dev
   jpa:
     show-sql: true
+    properties:
+      hibernate:
+        format_sql: true
+# CORS Configuration pour développement
+cors:
+  allowed-origins: ${CORS_ORIGINS:http://localhost:3000,http://localhost:19006,http://127.0.0.1:3000,http://127.0.0.1:19006}
 logging:
   level:
+    root: INFO
     com.medverify: DEBUG
     org.springframework.security: DEBUG
+    org.hibernate.SQL: DEBUG
+    org.hibernate.type.descriptor.sql.BasicBinder: TRACE
+
+---
+# Profile: Local (pour développement avec téléphone/émulateur)
+# Utiliser avec : -Dspring.profiles.active=local
+# ⚠️ Permet les IPs locales et émulateurs pour développement React Native
+spring:
+  config:
+    activate:
+      on-profile: local
+# CORS Configuration pour développement local (avec téléphone/émulateur)
+cors:
+  allowed-origins: ${CORS_ORIGINS:*,http://localhost:3000,http://localhost:19006,http://127.0.0.1:3000,http://127.0.0.1:19006,http://192.168.1.16:8080,http://10.0.2.2:8080}
 
 ---
 # Profile: Test
@@ -246,12 +271,21 @@ spring:
 
 ---
 # Profile: Production
+# Utiliser avec : -Dspring.profiles.active=prod
+# ⚠️ SÉCURITÉ : Aucun log DEBUG en production
 spring:
   config:
     activate:
       on-profile: prod
   jpa:
     show-sql: false
+    properties:
+      hibernate:
+        format_sql: false
+# CORS Configuration pour production - uniquement domaines réels
+cors:
+  allowed-origins: ${CORS_ORIGINS:https://medverify.gw,https://www.medverify.gw}
+  # Aucune IP locale autorisée en production
 logging:
   level:
     root: INFO
@@ -260,3 +294,4 @@ logging:
     org.hibernate.SQL: WARN
     org.hibernate.type.descriptor.sql.BasicBinder: WARN
     org.springframework.web: INFO
+    # Logs DEBUG complètement désactivés en production pour la sécurité
